# inksy

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
res/: icon.ico.license  icon.rc  screenshot_hello_world.png.license
src/: actions.rs  app.rs  buffer.rs  canvas.rs  clipboard.rs  colorwheel.wgsl  config.rs  file.rs  input.rs  main.rs  pixel.rs  render.rs  roundrect.wgsl  saturation_value_plot.wgsl  shader.wgsl  stroke.rs  tools.rs  ui.rs  utility.rs  windows.rs  wintab.rs
src/input/: _.rs  keymap.rs  linux.rs  wintab.rs
src/render/: _.rs  buffer.rs  dynamic_buffer.rs  dynamic_storage_buffer.rs  instance_renderer.rs  renderer.rs  stroke_renderer.rs  text_renderer.rs  texture.rs  uniform_buffer.rs  vertex_attributes.rs  vertex_renderer.rs
src/render/shaders/: canvas_image.wgsl  color_picker_ring.wgsl  color_picker_trigon.wgsl  round_rectangle.wgsl  stroke_trigon.wgsl  trigon.wgsl
src/shaders/: color_picker_ring.wgsl  colorwheel.wgsl  roundrect.wgsl  saturation_value_plot.wgsl  shader.wgsl
src/utility/: _.rs  color.rs  tracked.rs
