# Copyright (C) 2023 Aaron Yeoh Cruz <zeyonaut@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "inkslate"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
winit = "0.28.6"
env_logger = "0.10"
log = "0.4"
wgpu = {version = "0.16", features = ["vulkan-portability"]}
raw-window-handle = "0.5"
pollster = "0.3"
bytemuck = { version = "1.12.1", features = [ "derive", "min_const_generics" ] }
bitflags = "2.3.3"
fast-srgb8 = "1.0"
enumset = "1.1.2"
derive_more = "0.99.17"
image = "0.24.7"

[target.'cfg(windows)'.dependencies]
windows-sys = "0.48"
libloading = "0.8.0"

[target.'cfg(linux)'.dependencies]
x11-dl = "2.21.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
