# Copyright (C) 2023 Aaron Yeoh Cruz <zeyonaut@gmail.com>
# SPDX-License-Identifier: CC0-1.0

[package]
name = "inksy"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
build = "build.rs"

[dependencies]
winit = {version = "0.29.0", features = [ "rwh_06" ]}
env_logger = "0.11.3"
log = "0.4"
wgpu = {version = "0.20.0", features = ["vulkan-portability"]}
raw-window-handle = "0.6"
pollster = "0.3"
bytemuck = { version = "1.13", features = [ "derive", "min_const_generics" ] }
bitflags = "2.5"
fast-srgb8 = "1.0"
enumset = "1.1.2"
derive_more = "0.99.17"
png = "0.17.13"
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "670140e2a1482a1ad3607dead44c40d8261ba582" }
rfd = "0.14.1"
futures-intrusive = "0.5.0"
kdl = "4.6.0"
dirs = "5.0.1"
tinybmp = "0.5.0"
embedded-graphics = "0.8.1"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.2.0"

[target.'cfg(windows)'.dependencies]
windows-sys = {version = "0.52", default-features = false, features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader"]}
libloading = "0.8.0"
clipboard-win = "5.3.1"

[target.'cfg(linux)'.dependencies]
x11-dl = "2.21.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
